2A/05_Projet_GL/src/test/deca/syntax/valid/Objet/33_DeclPlsField.deca
// Description:
//    Programme : declaration de plusieurs field et initialisation avec des operations
// Resultats:
//      Programme correcte
//
// Historique:
//    cree le 19/01/2024
class A {
    protected int x=0, y= 5, z =x+y, t =2*3; 
    int a =3;
}